--- a/app/src/main/res/layout/item/layout/create_post_img_layout_2.xml
+++ b/app/src/main/res/layout/item/layout/create_post_img_layout_2.xml
@@ -15,7 +15,7 @@
         android:id="@+id/img_0"
         android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         app:rStrokeWidth="1dp"
         app:rStrokeColor="#f2f3f7"
         app:rRadius="10dp"/>
@@ -27,7 +27,7 @@
         android:id="@+id/img_1"
         android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         app:rStrokeWidth="1dp"
         app:rStrokeColor="#f2f3f7"
         app:rRadius="10dp"/>
