--- a/app/src/main/res/layout/activity/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity/layout/activity_view_post.xml
@@ -20,7 +20,7 @@
             <RelativeLayout
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="40dp">
+                android:layout_height="wrap_content">
                 <net.csdn.roundview.RoundImageView
                     android:layout_centerVertical="true"
                     android:src="@mipmap/ic_launcher_round"
