--- a/app/src/main/res/layout/item/layout/create_post_img_layout_1.xml
+++ b/app/src/main/res/layout/item/layout/create_post_img_layout_1.xml
@@ -13,7 +13,7 @@
         android:scaleType="centerCrop"
         android:id="@+id/img_0"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         app:rStrokeWidth="1dp"
         app:rStrokeColor="#f2f3f7"
         app:rRadius="10dp"/>
