--- a/app/src/main/res/layout/item/layout/create_post_img_layout_4.xml
+++ b/app/src/main/res/layout/item/layout/create_post_img_layout_4.xml
@@ -20,7 +20,7 @@
             android:id="@+id/img_0"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             app:rStrokeWidth="1dp"
             app:rStrokeColor="#f2f3f7"
             app:rRadius="10dp"/>
@@ -32,7 +32,7 @@
             android:id="@+id/img_1"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             app:rStrokeWidth="1dp"
             app:rStrokeColor="#f2f3f7"
             app:rRadius="10dp"/>
@@ -43,7 +43,7 @@
             android:id="@+id/img_2"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             app:rStrokeWidth="1dp"
             app:rStrokeColor="#f2f3f7"
             app:rRadius="10dp"/>
@@ -53,7 +53,7 @@
         android:layout_marginTop="4dp"
         android:id="@+id/img_3"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         app:rStrokeWidth="1dp"
         app:rStrokeColor="#f2f3f7"
         app:rRadius="10dp"/>
