--- a/app/src/main/res/layout/window/layout/window_post_view.xml
+++ b/app/src/main/res/layout/window/layout/window_post_view.xml
@@ -103,16 +103,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <LinearLayout
+                    android:showDividers="middle"
+                    android:divider="@drawable/divider"
                     android:orientation="vertical"
+                    android:padding="10dp"
+                    android:id="@+id/linear"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                    <LinearLayout
-                        android:orientation="vertical"
-                        android:id="@+id/linear"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
 
-                    </LinearLayout>
                 </LinearLayout>
             </ScrollView>
 
