--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="TRANSPARENT">#00000000</color>
+    <color name="描边颜色">#80808080</color>
+
 </resources>
