--- a/app/src/main/res/layout/view/layout/view_square.xml
+++ b/app/src/main/res/layout/view/layout/view_square.xml
@@ -4,11 +4,6 @@
     android:layout_width="match_parent"
     android:background="#00000000"
     android:layout_height="match_parent">
-    <TextView
-        android:background="#ffffff"
-        android:id="@+id/top_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
     <RelativeLayout
         android:id="@+id/relati"
         android:background="#ffffff"
@@ -23,22 +18,11 @@
             android:layout_width="30dp"
             android:layout_height="30dp"/>
         <ImageView
-            android:layout_centerVertical="true"
-            android:layout_toStartOf="@id/title"
+            android:layout_centerInParent="true"
             android:id="@+id/new_icon"
             android:src="@drawable/square_new_icon"
             android:layout_width="40dp"
-            android:layout_height="23dp"/>
-        <TextView
-            android:textStyle="bold"
-            android:layout_centerInParent="true"
-            android:textColor="@color/black"
-            android:text="时间线"
-            android:id="@+id/title"
-            android:textSize="15sp"
-            android:gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="30dp"/>
         <RelativeLayout
             android:id="@+id/button_add"
             android:layout_centerVertical="true"
@@ -52,7 +36,7 @@
         </RelativeLayout>
     </RelativeLayout>
     <View
-        android:id="@+id/xian1"
+        android:id="@+id/xian"
         android:background="#808080"
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
