--- a/app/src/main/res/layout/view/layout/view_main_pager.xml
+++ b/app/src/main/res/layout/view/layout/view_main_pager.xml
@@ -3,7 +3,7 @@
     android:background="#f2f3f7"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <androidx.viewpager.widget.ViewPager
+    <fun.android.federal_square.view.View_Pager
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
