--- a/app/src/main/res/layout/activity/layout/activity_view_collection.xml
+++ b/app/src/main/res/layout/activity/layout/activity_view_collection.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#ffffff"
+    android:background="#f2f3f7"
     android:layout_height="match_parent">
+    <View
+        android:background="#ffffff"
+        android:id="@+id/top_view"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
     <RelativeLayout
+        android:layout_below="@id/top_view"
         android:id="@+id/relati"
         android:background="#ffffff"
         android:layout_width="match_parent"
