--- a/app/src/main/res/layout/view/layout/view_home.xml
+++ b/app/src/main/res/layout/view/layout/view_home.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:id="@+id/linear_main"
-    android:background="@color/white"
+    android:background="#f2f3f7"
     android:layout_height="match_parent">
 
 </LinearLayout>
