--- a/app/src/main/res/values-v35/themes.xml
+++ b/app/src/main/res/values-v35/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
-
-    <style name="Base.Theme.FederalSquare" parent="Theme.Material3.DayNight" tools:ignore="DuplicateDefinition">
+<resources>
+    <style name="Base.Theme.FederalSquare" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:windowOptOutEdgeToEdgeEnforcement">true</item>
+        <item name="android:windowLightNavigationBar">true</item>
     </style>
 </resources>
