--- a/app/src/main/res/layout/activity/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity/layout/activity_view_post.xml
@@ -42,7 +42,7 @@
                     android:layout_toEndOf="@id/avatar_img"
                     android:id="@+id/name"
                     android:layout_marginStart="5dp"
-                    android:textSize="15sp"
+                    android:autoSizeTextType="uniform"
                     android:textColor="@color/black"
                     android:text=""
                     android:layout_width="wrap_content"
@@ -53,7 +53,7 @@
                     android:layout_alignParentBottom="true"
                     android:layout_toEndOf="@id/avatar_img"
                     android:layout_marginStart="5dp"
-                    android:textSize="15sp"
+                    android:autoSizeTextType="uniform"
                     android:textColor="#808080"
                     android:text=""
                     android:layout_width="wrap_content"
@@ -64,9 +64,9 @@
                     android:text=""
                     android:gravity="end"
                     android:layout_alignParentEnd="true"
-                    android:textSize="11sp"
+                    android:autoSizeTextType="uniform"
                     android:layout_width="wrap_content"
-                    android:layout_height="15dp"/>
+                    android:layout_height="20dp"/>
             </RelativeLayout>
             <LinearLayout
                 android:layout_marginTop="6dp"
@@ -80,10 +80,10 @@
                 android:layout_marginBottom="8dp"
                 android:id="@+id/text_time"
                 android:textColor="#808080"
-                android:textSize="11sp"
+                android:autoSizeTextType="uniform"
                 android:gravity="end"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="20dp"/>
             <TextView
                 android:background="#f2f3f7"
                 android:layout_width="match_parent"
