--- a/app/src/main/res/layout/discuss/layout/discuss_child_layout_view.xml
+++ b/app/src/main/res/layout/discuss/layout/discuss_child_layout_view.xml
@@ -11,35 +11,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:autoSizeTextType="uniform"
             android:layout_centerVertical="true"
             android:gravity="center"
             android:id="@+id/name"
-            android:textSize="13sp"
             android:textColor="#808080"
             android:text=""
             android:layout_width="wrap_content"
             android:layout_height="20dp"/>
         <TextView
+            android:autoSizeTextType="uniform"
             android:layout_centerVertical="true"
             android:id="@+id/sign"
             android:gravity="center"
             android:textColor="#808080"
             android:text=""
             android:layout_alignParentEnd="true"
-            android:textSize="11sp"
             android:layout_width="wrap_content"
             android:layout_height="20dp"/>
     </RelativeLayout>
     <TextView
+        android:layout_marginStart="6dp"
+        android:autoSizeTextType="uniform"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:textIsSelectable="true"
         android:background="#ffffff"
         android:gravity="start"
         android:id="@+id/text"
-        android:textSize="13sp"
         android:textColor="@color/black"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
         android:layout_marginTop="8dp"
