--- a/app/src/main/res/layout/item/layout/disk_item.xml
+++ b/app/src/main/res/layout/item/layout/disk_item.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/linear"
-    android:background="@drawable/round_white_stroke_black"
-    android:padding="2dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="0dp"
+    app:cardPreventCornerOverlap="true"
+    app:cardUseCompatPadding="false"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <fun.android.federal_square.view.Video_ImageView
         android:id="@+id/img"
-        android:scaleType="fitCenter"
-        android:layout_gravity="center"
+        android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-</RelativeLayout>
+        android:layout_height="match_parent"/>
+</androidx.cardview.widget.CardView>
