--- a/app/src/main/res/layout/post/layout/create_post_layout.xml
+++ b/app/src/main/res/layout/post/layout/create_post_layout.xml
@@ -62,9 +62,9 @@
                     android:text=""
                     android:gravity="end"
                     android:layout_weight="1"
-                    android:autoSizeTextType="uniform"
+                    android:textSize="9sp"
                     android:layout_width="match_parent"
-                    android:layout_height="20dp"/>
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_marginTop="6dp"
@@ -96,11 +96,11 @@
             <TextView
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:autoSizeTextType="uniform"
                 android:textColor="#808080"
                 android:text="转发"
+                android:textSize="9sp"
                 android:layout_width="wrap_content"
-                android:layout_height="20dp"/>
+                android:layout_height="wrap_content"/>
         </LinearLayout>
         <LinearLayout
             android:id="@+id/button_message"
@@ -115,11 +115,11 @@
             <TextView
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:autoSizeTextType="uniform"
                 android:textColor="#808080"
                 android:text="评论"
+                android:textSize="9sp"
                 android:layout_width="wrap_content"
-                android:layout_height="20dp"/>
+                android:layout_height="wrap_content"/>
         </LinearLayout>
         <LinearLayout
             android:layout_marginStart="50dp"
@@ -133,13 +133,14 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"/>
             <TextView
+
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:autoSizeTextType="uniform"
                 android:textColor="#808080"
                 android:text="收藏"
+                android:textSize="9sp"
                 android:layout_width="wrap_content"
-                android:layout_height="20dp"/>
+                android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
     <View
