--- a/app/src/main/res/layout/activity/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity/layout/activity_view_post.xml
@@ -41,6 +41,7 @@
                     android:gravity="center_vertical"
                     android:layout_toEndOf="@id/avatar_img"
                     android:id="@+id/name"
+                    android:textStyle="bold"
                     android:layout_marginStart="5dp"
                     android:autoSizeTextType="uniform"
                     android:textColor="@color/black"
@@ -60,11 +61,12 @@
                     android:layout_height="20dp"/>
                 <TextView
                     android:id="@+id/sign"
-                    android:textColor="#000000"
+                    android:textColor="#808080"
                     android:text=""
                     android:gravity="end"
+                    android:layout_weight="1"
+                    android:textSize="9sp"
                     android:layout_alignParentEnd="true"
-                    android:autoSizeTextType="uniform"
                     android:layout_width="wrap_content"
                     android:layout_height="20dp"/>
             </RelativeLayout>
