--- a/app/src/main/res/values-v35/themes.xml
+++ b/app/src/main/res/values-v35/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Base.Theme.FederalSquare" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.FederalSquare" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:windowOptOutEdgeToEdgeEnforcement">true</item>
         <item name="android:windowLightNavigationBar">true</item>
     </style>
