--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,9 @@
 <resources>
 
+
+    <style name="Base.Theme.FederalSquare" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:windowLightNavigationBar">true</item>
+    </style>
     <style name="Theme.FederalSquare" parent="Base.Theme.FederalSquare" />
 
     <style name="AlertDialog_Null" parent="android:Theme.Dialog">
