--- a/app/src/main/res/layout/discuss/layout/discuss_child_layout_view.xml
+++ b/app/src/main/res/layout/discuss/layout/discuss_child_layout_view.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="20dp"/>
         <TextView
-            android:autoSizeTextType="uniform"
+            android:textSize="9sp"
             android:layout_centerVertical="true"
             android:id="@+id/sign"
             android:gravity="center"
@@ -31,19 +31,15 @@
             android:layout_height="20dp"/>
     </RelativeLayout>
     <TextView
-        android:layout_marginStart="6dp"
         android:autoSizeTextType="uniform"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:textIsSelectable="true"
-        android:background="#ffffff"
         android:gravity="start"
         android:id="@+id/text"
         android:textColor="@color/black"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <TextView
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
         android:background="#f2f3f7"
         android:layout_width="match_parent"
         android:layout_height="1dp" />
