--- a/app/src/main/res/layout/view/layout/timeline_view.xml
+++ b/app/src/main/res/layout/view/layout/timeline_view.xml
@@ -4,5 +4,6 @@
     android:id="@+id/linear"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+
 </LinearLayout>
