--- a/app/src/main/res/layout/activity/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
@@ -15,12 +16,23 @@
         android:layout_height="wrap_content">
 
     </ScrollView>
+    <!-- 这里有一个上滑的控件 什么控件合适呢 -->
+    <ImageView
+        android:layout_margin="10dp"
+        android:layout_above="@id/bottomNavigationView"
+        android:id="@+id/button_sheet"
+        android:src="@drawable/menu_up"
+        android:alpha="0.2"
+        android:scaleType="fitCenter"
+        android:layout_width="match_parent"
+        android:layout_height="15dp"/>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_gravity="bottom"
         app:menu="@menu/menu"
         app:labelVisibilityMode="labeled"/>
 </RelativeLayout>
