--- a/app/src/main/res/layout/view/layout/home_view.xml
+++ b/app/src/main/res/layout/view/layout/home_view.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="#f2f3f7"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
@@ -82,4 +81,11 @@
         </RelativeLayout>
 
     </RelativeLayout>
+    <LinearLayout
+        android:id="@+id/linear"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </LinearLayout>
 </LinearLayout>
